--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,19 +12,32 @@
 [package]
 edition = "2018"
 name = "zeroize_derive"
-version = "1.3.2"
+version = "1.3.3"
 authors = ["The RustCrypto Project Developers"]
 description = "Custom derive support for zeroize"
 readme = "README.md"
-keywords = ["memory", "memset", "secure", "volatile", "zero"]
-categories = ["cryptography", "memory-management", "no-std", "os"]
+keywords = [
+    "memory",
+    "memset",
+    "secure",
+    "volatile",
+    "zero",
+]
+categories = [
+    "cryptography",
+    "memory-management",
+    "no-std",
+    "os",
+]
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/RustCrypto/utils/tree/master/zeroize/derive"
+
 [package.metadata.docs.rs]
 rustdoc-args = ["--document-private-items"]
 
 [lib]
 proc-macro = true
+
 [dependencies.proc-macro2]
 version = "1"
 
